--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .App {
-  text-align: center;
+  overflow-y: hidden;
+  width: 300vw;
+  height: 100vh;
+  background: linear-gradient(270deg, #000000 0%, rgba(72, 72, 72, 0.31) 51.33%),
+    linear-gradient(90deg, #000000 0.54%, #484848 55.05%);
+  position: relative;
+  font-family: "Red Rose", cursive;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  mix-blend-mode: soft-light;
+  background-size: fit-content;
+  background-repeat: no-repeat;
+  filter: invert(100%);
+  filter: grayscale(100%);
 }
